regression/fail/exp.4.sml
val rec x = fn () => ()
and x = fn () => ()
